Responsive: fix json-ld display & tweak field display on small screens

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -169,16 +169,20 @@ iframe {
 
 /* just some content with arbitrary styles for explanation purposes */
 .jsonld {
+  flex-direction: column;
   display: none;
   width: 800px;
+  max-width: 95vw;
   height: 89%;
   border-radius: 10px;
   position: fixed;
-  overflow-y: scroll;
-  top: 21%;
-  left: 37%;
-  margin-top: -100px;
-  margin-left: -150px;
+  overflow-y: hidden;
+  top: 10%;
+  left: 0;
+  right: 0;
+  margin-top: 0;
+  margin-left: auto;
+  margin-right: auto;
   background-color: #f7f7f7;
   border-radius: 5px;
   z-index: 9001; /* 1px higher than the overlay layer */
@@ -450,11 +454,12 @@ textarea.input100 {
 
 @media (max-width: 576px) {
   .wrap-contact100 {
-    padding: 62px 15px 90px 15px;
+    padding: 62px 0px 90px 0px;
   }
 
   .wrap-input100 {
-    padding: 10px 10px 9px 10px;
+    padding: 10px 5px 9px 5px;
+    width: 100%;
   }
 }
 
@@ -887,6 +892,12 @@ li {
   display: inline-block;
 }
 
+@media (max-width: 576px) {
+  .spacer {
+    display: none
+  }
+}
+
 h3.title {
   display: none;
 }
@@ -1035,6 +1046,13 @@ textarea::-webkit-scrollbar-thumb {
 #page-logo-helper img {
   height: 60%;
   display: block;
+  max-height: 60px;
+}
+
+@media (max-width: 576px) {
+  #page-logo-helper img {
+    max-height: 50px;
+  }
 }
 
 .steps-overview-facility-title {
