--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -2,7 +2,7 @@
 #navbar {
     overflow: hidden;
     background-color: #1072ba;
-    z-index: 9999;
+    z-index: 9000;
   }
   
   /* Navbar links */
